--- a/Style.css
+++ b/Style.css
@@ -1,11 +1,16 @@
+@font-face {
+    font-family: AmaticSC-Bold;
+    src: url(AmaticSC-Bold.ttf);
+}
+
 .photoDeProfile{
     width:20%;
 
 }
 
 .titreProfile{
-    color:blue;
-    font-family: "American Typewriter", serif;
+    color:black;
+    font-family: "AmaticSC-Bold";
 }
 a{
     text-decoration: none;
@@ -13,5 +18,17 @@ a{
 
 img{
     text-decoration: none;
+}
+
+body{
+    background-image: url("fond d'ecran.png");
+}
+
+.conteneur_1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 200px;
+
 }
 
