--- a/Style_page_forum.css
+++ b/Style_page_forum.css
@@ -3,6 +3,7 @@ body{
     color: #1a202c;
     text-align: left;
     background-color: #e2e8f0;
+    background-image: url("Fond_neutre.jpg")
 }
 .inner-wrapper {
     position: relative;
